feat: httpserver added the create and delete ha
