# httpserver/gen/http/openapi.yaml
@@ -13,6 +13,102 @@ produces:
     - application/xml
     - application/gob
 paths:
+    /addnodes:
+        put:
+            tags:
+                - httpserver
+            summary: scaleup httpserver
+            operationId: httpserver#scaleup
+            parameters:
+                - name: ScaleupRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/HttpserverScaleupRequestBody'
+                    required:
+                        - cluster_name
+                        - region
+                        - cloud
+                        - distro
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/HttpserverScaleupResponseBody'
+            schemes:
+                - http
+    /createha:
+        put:
+            tags:
+                - httpserver
+            summary: create ha httpserver
+            operationId: httpserver#create ha
+            parameters:
+                - name: Create HaRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/HttpserverCreateHaRequestBody'
+                    required:
+                        - cluster_name
+                        - region
+                        - cloud
+                        - distro
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/HttpserverCreateHaResponseBody'
+            schemes:
+                - http
+    /deleteha:
+        put:
+            tags:
+                - httpserver
+            summary: delete ha httpserver
+            operationId: httpserver#delete ha
+            parameters:
+                - name: Delete HaRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/HttpserverDeleteHaRequestBody'
+                    required:
+                        - cluster_name
+                        - region
+                        - cloud
+                        - distro
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/HttpserverDeleteHaResponseBody'
+            schemes:
+                - http
+    /deletenodes:
+        put:
+            tags:
+                - httpserver
+            summary: scaledown httpserver
+            operationId: httpserver#scaledown
+            parameters:
+                - name: ScaledownRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/HttpserverScaledownRequestBody'
+                    required:
+                        - cluster_name
+                        - region
+                        - cloud
+                        - distro
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/HttpserverScaledownResponseBody'
+            schemes:
+                - http
     /healthz:
         get:
             tags:
@@ -24,6 +120,19 @@ paths:
                     description: OK response.
                     schema:
                         $ref: '#/definitions/HttpserverGetHealthResponseBody'
+            schemes:
+                - http
+    /list:
+        get:
+            tags:
+                - httpserver
+            summary: get clusters httpserver
+            operationId: httpserver#get clusters
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/HttpserverGetClustersResponseBody'
             schemes:
                 - http
     /openapi3.json:
@@ -70,7 +179,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: true
+                example: false
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -97,7 +206,7 @@ definitions:
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: false
+            temporary: true
             timeout: true
         required:
             - name
@@ -106,6 +215,223 @@ definitions:
             - temporary
             - timeout
             - fault
+    HttpserverCreateHaRequestBody:
+        title: HttpserverCreateHaRequestBody
+        type: object
+        properties:
+            cloud:
+                type: string
+                description: cloud provider
+                example: azure
+            cluster_name:
+                type: string
+                description: Cluster name
+                example: demo
+            distro:
+                type: string
+                description: kubernetes distribution
+                example: k3s
+            no_cp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 3
+                minimum: 3
+                maximum: 10
+            no_ds:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_mp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_wp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 0
+            region:
+                type: string
+                description: Region
+                example: XYZ
+            vm_size_cp:
+                type: string
+                description: virtual machine size for the controlplane
+                example: Qui dolorum deleniti ex.
+            vm_size_ds:
+                type: string
+                description: virtual machine size for the datastore
+                example: Blanditiis nesciunt ullam voluptate sequi.
+            vm_size_lb:
+                type: string
+                description: virtual machine size for the loadbalancer
+                example: Sed maiores.
+            vm_size_wp:
+                type: string
+                description: virtual machine size for the workerplane
+                example: Molestiae eveniet nobis voluptatibus quia totam dolores.
+        example:
+            cloud: azure
+            cluster_name: demo
+            distro: k3s
+            no_cp: 3
+            no_ds: 1
+            no_mp: 1
+            no_wp: 1
+            region: XYZ
+            vm_size_cp: Non est non odio.
+            vm_size_ds: Deserunt tempora.
+            vm_size_lb: Molestiae impedit et magni rerum iste enim.
+            vm_size_wp: Ut occaecati excepturi.
+        required:
+            - cluster_name
+            - region
+            - cloud
+            - distro
+    HttpserverCreateHaResponseBody:
+        title: HttpserverCreateHaResponseBody
+        type: object
+        properties:
+            errors:
+                type: string
+                description: reason of failure
+                example: Velit unde repellendus.
+            ok:
+                type: boolean
+                description: successful
+                example: true
+            response:
+                type: string
+                description: response
+                example: Eos ut occaecati qui.
+                format: binary
+        example:
+            errors: Porro est ullam non molestiae ipsum.
+            ok: true
+            response: Repudiandae voluptate et enim.
+    HttpserverDeleteHaRequestBody:
+        title: HttpserverDeleteHaRequestBody
+        type: object
+        properties:
+            cloud:
+                type: string
+                description: cloud provider
+                example: azure
+            cluster_name:
+                type: string
+                description: Cluster name
+                example: demo
+            distro:
+                type: string
+                description: kubernetes distribution
+                example: k3s
+            no_cp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 3
+                minimum: 3
+                maximum: 10
+            no_ds:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_mp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_wp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 0
+            region:
+                type: string
+                description: Region
+                example: XYZ
+            vm_size_cp:
+                type: string
+                description: virtual machine size for the controlplane
+                example: Corrupti veniam magnam in fugit soluta.
+            vm_size_ds:
+                type: string
+                description: virtual machine size for the datastore
+                example: Vel voluptatem voluptatum inventore.
+            vm_size_lb:
+                type: string
+                description: virtual machine size for the loadbalancer
+                example: Amet sunt quidem voluptatem omnis.
+            vm_size_wp:
+                type: string
+                description: virtual machine size for the workerplane
+                example: Nemo voluptas quidem repellendus facere quasi.
+        example:
+            cloud: azure
+            cluster_name: demo
+            distro: k3s
+            no_cp: 3
+            no_ds: 1
+            no_mp: 1
+            no_wp: 1
+            region: XYZ
+            vm_size_cp: Maiores non quis et rerum natus officiis.
+            vm_size_ds: Quos soluta nostrum ea.
+            vm_size_lb: Incidunt rerum aut voluptatem atque.
+            vm_size_wp: Id voluptas aliquam.
+        required:
+            - cluster_name
+            - region
+            - cloud
+            - distro
+    HttpserverDeleteHaResponseBody:
+        title: HttpserverDeleteHaResponseBody
+        type: object
+        properties:
+            errors:
+                type: string
+                description: reason of failure
+                example: Cupiditate voluptatem.
+            ok:
+                type: boolean
+                description: successful
+                example: false
+            response:
+                type: string
+                description: response
+                example: Veniam in voluptatem repellendus illo amet.
+                format: binary
+        example:
+            errors: Tempora et aut.
+            ok: false
+            response: Et numquam est dicta magni quaerat nihil.
+    HttpserverGetClustersResponseBody:
+        title: HttpserverGetClustersResponseBody
+        type: object
+        properties:
+            errors:
+                type: string
+                description: reason of failure
+                example: Iusto ea velit cupiditate.
+            ok:
+                type: boolean
+                description: successful
+                example: false
+            response:
+                type: string
+                description: response
+                example: Et doloribus omnis commodi at.
+                format: binary
+        example:
+            errors: Illo non quam rerum.
+            ok: false
+            response: Accusantium natus totam quo.
     HttpserverGetHealthResponseBody:
         title: HttpserverGetHealthResponseBody
         type: object
@@ -113,6 +439,202 @@ definitions:
             msg:
                 type: string
                 description: message
-                example: Nobis est illum similique illum ducimus sit.
+                example: In culpa aliquam.
         example:
-            msg: Assumenda cumque et.
+            msg: Enim qui consequatur necessitatibus omnis quis quis.
+    HttpserverScaledownRequestBody:
+        title: HttpserverScaledownRequestBody
+        type: object
+        properties:
+            cloud:
+                type: string
+                description: cloud provider
+                example: azure
+            cluster_name:
+                type: string
+                description: Cluster name
+                example: demo
+            distro:
+                type: string
+                description: kubernetes distribution
+                example: k3s
+            no_cp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 3
+                minimum: 3
+                maximum: 10
+            no_ds:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_mp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_wp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 0
+            region:
+                type: string
+                description: Region
+                example: XYZ
+            vm_size_cp:
+                type: string
+                description: virtual machine size for the controlplane
+                example: Optio laboriosam dolore reprehenderit corporis alias explicabo.
+            vm_size_ds:
+                type: string
+                description: virtual machine size for the datastore
+                example: Unde eligendi nemo.
+            vm_size_lb:
+                type: string
+                description: virtual machine size for the loadbalancer
+                example: Similique vitae.
+            vm_size_wp:
+                type: string
+                description: virtual machine size for the workerplane
+                example: Iusto natus quas iure magnam accusamus enim.
+        example:
+            cloud: azure
+            cluster_name: demo
+            distro: k3s
+            no_cp: 3
+            no_ds: 1
+            no_mp: 1
+            no_wp: 1
+            region: XYZ
+            vm_size_cp: Dicta fugiat temporibus assumenda sunt.
+            vm_size_ds: Aliquid in quo enim.
+            vm_size_lb: Molestias dolorum rem consequatur necessitatibus aut.
+            vm_size_wp: Suscipit quasi enim enim et ratione animi.
+        required:
+            - cluster_name
+            - region
+            - cloud
+            - distro
+    HttpserverScaledownResponseBody:
+        title: HttpserverScaledownResponseBody
+        type: object
+        properties:
+            errors:
+                type: string
+                description: reason of failure
+                example: Maiores consectetur ducimus sunt et veniam.
+            ok:
+                type: boolean
+                description: successful
+                example: true
+            response:
+                type: string
+                description: response
+                example: Dicta modi voluptatem deserunt dolorem laboriosam.
+                format: binary
+        example:
+            errors: Accusamus cum et et magni.
+            ok: true
+            response: Aut deleniti.
+    HttpserverScaleupRequestBody:
+        title: HttpserverScaleupRequestBody
+        type: object
+        properties:
+            cloud:
+                type: string
+                description: cloud provider
+                example: azure
+            cluster_name:
+                type: string
+                description: Cluster name
+                example: demo
+            distro:
+                type: string
+                description: kubernetes distribution
+                example: k3s
+            no_cp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 3
+                minimum: 3
+                maximum: 10
+            no_ds:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_mp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 1
+                maximum: 3
+            no_wp:
+                type: integer
+                description: desired no of workerplane nodes
+                example: 1
+                minimum: 0
+            region:
+                type: string
+                description: Region
+                example: XYZ
+            vm_size_cp:
+                type: string
+                description: virtual machine size for the controlplane
+                example: Dignissimos quos at ut occaecati asperiores.
+            vm_size_ds:
+                type: string
+                description: virtual machine size for the datastore
+                example: Sit deserunt sit et et quibusdam.
+            vm_size_lb:
+                type: string
+                description: virtual machine size for the loadbalancer
+                example: Similique et porro hic commodi cum ut.
+            vm_size_wp:
+                type: string
+                description: virtual machine size for the workerplane
+                example: Tenetur qui voluptatem iusto.
+        example:
+            cloud: azure
+            cluster_name: demo
+            distro: k3s
+            no_cp: 3
+            no_ds: 1
+            no_mp: 1
+            no_wp: 1
+            region: XYZ
+            vm_size_cp: Unde architecto deserunt nostrum.
+            vm_size_ds: Dolorem alias reprehenderit veritatis voluptatum quis.
+            vm_size_lb: Fuga quia ad facere.
+            vm_size_wp: Quia velit at ex.
+        required:
+            - cluster_name
+            - region
+            - cloud
+            - distro
+    HttpserverScaleupResponseBody:
+        title: HttpserverScaleupResponseBody
+        type: object
+        properties:
+            errors:
+                type: string
+                description: reason of failure
+                example: Rerum molestiae fugit.
+            ok:
+                type: boolean
+                description: successful
+                example: true
+            response:
+                type: string
+                description: response
+                example: Et officia perferendis libero dolores commodi.
+                format: binary
+        example:
+            errors: Assumenda omnis.
+            ok: false
+            response: Nulla voluptatem.
